<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="manifest_app_name">Car Flash</string>
    <string name="app_name">Car Flash</string>
    <string name="closeDrawer">Close</string>
    <string name="openDrawer">Open</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="loading">Loading...</string>
    <string name="please_wiat_your_driver_reach_you_soon_soon_in_a_while">Please wait, your driver will come soon </string>
    <string name="enter_drop_location">Enter drop location</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="enter_email">Enter Email</string>
    <string name="date">DATE :</string>
    <string name="order_id">ORDER ID :</string>
    <string name="payment_id">PAYMENT ID :</string>
    <string name="payment_amount">PAYMENT AMOUNT :</string>
    <string name="payment_status">PAYMENT STATUS :</string>
    <string name="payment_platform">PAYMENT PLATFORM :</string>
    <string name="login">LOGIN</string>
    <string name="email_phone">Email/Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password_1">Forgot Password?</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="ride_estimate">RIDE ESTIMATE</string>
    <string name="your_account">YOUR ACCOUNT</string>
    <string name="email_id_big">EMAIL ID</string>
    <string name="password_big">PASSWORD</string>
    <string name="name_big">NAME</string>
    <string name="mobile_big">MOBILE NUMBER</string>
    <string name="logout">LOGOUT</string>
    <string name="city">CITY</string>
    <string name="car_type">CAR TYPE</string>
    <string name="first_2_kms">First 2 kms</string>
    <string name="after_2_kms">After 2 kms</string>
    <string name="extra_charges">EXTRA CHARGES</string>
    <string name="waiting_time_charges">Waiting Time Charges</string>
    <string name="first_5_mint_wait_free">First 5 mints waiting is FREE !</string>
    <string name="traffic_wait">Traffic wait is chargeable</string>
    <string name="peak_time">Peak time charges</string>
    <string name="peak_time_charges">Peak time charges may be applicable during high demand hours and will be conveyed during the booking. This enables us to make more cabs available to you</string>
    <string name="service_charges">Service Charges</string>
    <string name="service_tax">Service tax is payable in addition to ride fare.</string>
    <string name="total_distance">Total Distance : </string>
    <string name="view_invoice">View Invoice</string>
    <string name="report_issue">Report Issue</string>
    <string name="call_support">Call Support</string>
    <string name="register">REGISTER</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_password">Enter Password</string>
    <string name="use_email">We use your email and mobile number to send you ride confirmation and receipts</string>
    <string name="approx_fare">Approx Fare : </string>
    <string name="approx_time">Approx Time : </string>
    <string name="login_as_testing">LOGIN AS TESTING</string>
    <string name="tc">Terms &amp; Conditions</string>
    <string name="driver_reached">Driver Reached at Your Door Step.</string>
    <string name="ok">Ok</string>
    <string name="sign_out">Sign out</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="network_problem">Network Problem!!</string>
    <string name="exit">EXIT</string>
    <string name="refresh">REFRESH</string>
    <string name="fare_breakup">Fare Breakup</string>
    <string name="waiting_charge">Waiting Charge</string>
    <string name="airport">Airport rates may differ. Peak time charges may apply. Service tax extra.</string>
    <string name="with_new_card">New card</string>
    <string name="use_saved_cards">Use save cards</string>
    <string name="book_a_ride">Book a Ride</string>
    <string name="my_rides">My Rides</string>
    <string name="rate_card1">Rate Card</string>
    <string name="about">About</string>
    <string name="or_sign_with">OR SIGH IN WITH</string>
    <string name="verify_phone">VERIFY MOBILE NUMBER</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="password_validate">Password should have a minimum 2 characters or numerics</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="total_fare">Total Fare</string>
    <string name="support">SUPPORT</string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="forgot_create">Forgot/Create Password?</string>
    <string name="get_started">GET STARTED</string>
    <string name="continuee">CONTINUE</string>
    <string name="signup">SIGN UP</string>
    <string name="signin">SIGN IN</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="otp1">We have sent an OTP to</string>
    <string name="otp2">Please enter it below.</string>
    <string name="password_not_match">Password Not Matched !!!</string>
    <string name="password_charcter">Password should be of min. 6 character</string>
    <string name="select_star">Please select stars</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="phone_character">Phone should between 9 to 14 digits</string>
    <string name="no_record_found">No Record Found</string>
    <string name="enter_correct_email">Please enter valid Email Address</string>
    <string name="book_rides">Book Rides</string>
    <string name="click_here">Click Here For Phone Number</string>
    <string name="profile">Profile</string>
    <string name="first">First</string>
    <string name="after">After</string>
    <string name="per">per</string>
    <string name="completed">COMPLETED</string>
    <string name="schedued">SCHEDULED</string>
    <string name="ongoing">ONGOING</string>
    <string name="rejected">REJECTED</string>
    <string name="cancel_by_driver">Cancel By Driver</string>
    <string name="driver_arrived">Driver Arrived</string>
    <string name="payment_done">Payment Done</string>
    <string name="update">Update</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="remind_me_later">Remind me Later</string>
    <string name="get_fare_estimate">Get Fare Estimete</string>
    <string name="setup_payment">Set up payment</string>
    <string name="version">Version</string>
    <string name="credit_card">Credit Card</string>
    <string name="incorrect_card_number">Incorrect card number</string>
    <string name="please_select_card">Please select stars</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">RETRY</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="hello_blank_fragment">Hello blank fragment Phone</string>
    <string name="error_loading">Error Loading</string>
    <string name="please_enter_drop_location">Please Enter drop Location</string>
    <string name="no_cars_avaiable">No cars Available !</string>
    <string name="please_select_payment_type">Please Select Payment Type</string>
    <string name="estimated_fare">Estimated Fare -</string>
    <string name="estimated_time">Estimated Time -</string>
    <string name="fetching_cars_please_wait">Fetching cars please wait...</string>
    <string name="set_up_payment">Set up payment</string>
    <string name="seats">Seats</string>
    <string name="min">MIN</string>
    <string name="ride_booked">Ride Booked</string>
    <string name="ride_cancelled">User Cancelled</string>
    <string name="ride_cancelled_by_driver">Driver Cancelled</string>
    <string name="driver_on_way">Arriving Now</string>
    <string name="booking_failed">Booking failed</string>
    <string name="ride_arrived">Ride Arrived</string>
    <string name="riding_now">Riding Now</string>
    <string name="ride_ended">Ride Ended</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="currency_code">\u</string>
    <string name="facebook_app_id">118291308824504</string>
    <string name="google_map_key">AIzaSyAFHKUT8ieish4jDpqTH8D-ScalHi-wUvM</string>
    <string name="fabric_key">54a77e298a52fd6775e6faf0b621fde0a76d5b04-g</string>
    <string name="stripe_key">pk_test_529XQobaN0Aa8VMJpqYFdT2n</string>
    <string name="paypal_key">AbRpAa0ZOX95Zczg8FTE9zUfH63kZ8mRwljpwikUMZcTZUMYksdNph8f0vIHia3jGZByTQGZw3xA0Tqh</string>
    <string name="twiter_key">jan5GBSe8Jl5yCJERTZq6vj7u</string>
    <string name="twitersecret">q2yKPLLRoU2bwzBP2QrD7gfC9aUr4Vmv6ghh3segybC55R6cCa</string>
    <string name="internet_problem">Internet Problem</string>
    <string name="per_km"></string>
    <string name="no_driver">No Driver</string>
    <string name="enter_card_number">ENTER CARD NUMBER</string>
    <string name="adminmail1">support@izycab.com</string>
    <string name="report_taxt_app_customer">Report Issue TaxiApp Customer</string>
    <string name="per_min">per min</string>
    <string name="estimated_amount">Estimated Amount</string>
    <string name="hours">hour</string>
    <string name="distancesymbol"></string>
    <string name="send_email">Send Email</string>
    <string name="enter_drop_locationn">Enter Drop Location...</string>
    <string name="email_send_successfully">Email Send Successfully</string>
    <string name="rating_successfull">Rating Successful</string>
    <string name="title_activity_ttttt">Title</string>
    <string name="you_have_requested_unauthorised_route">You have requested an unauthorised route</string>
    <string name="title_activity_rental_receipt">RentalReceiptActivity</string>
    <string name="RIDE_SELECTED_ACTIVITY__bill_detail">Bill Details</string>
    <string name="RIDE_SELECTED_ACTIVITY__total_distance_travel">Total Distance travel</string>
    <string name="RIDE_SELECTED_ACTIVITY__distance_fare">Distance Fare</string>
    <string name="RIDE_SELECTED_ACTIVITY__ride_time_charges">Ride Time Charges</string>
    <string name="RIDE_SELECTED_ACTIVITY__waiting_charge">Waiting Charge</string>
    <string name="RIDE_SELECTED_ACTIVITY__total_bill">Total Bill</string>
    <string name="RIDE_SELECTED_ACTIVITY__payment">Payment</string>
    <string name="RIDE_SELECTED_ACTIVITY__cash">CASH</string>
    <string name="RIDE_SELECTED_ACTIVITY__ride_details">Ride Details</string>
    <string name="RIDE_SELECTED_ACTIVITY__your_trip_details">Your Trip Details :</string>
    <string name="RIDE_SELECTED_ACTIVITY__track_ride">TRACK RIDE</string>
    <string name="RENTAL_RIDE_LOADER_ACTIVTY__sorry_no_driver_available">Oops! </string>
    <string name="RENTAL_RIDE_LOADER_ACTIVTY__ok">Ok</string>
    <string name="COUPON_ACTIVITY__apply_coupon">APPLY COUPON</string>
    <string name="COUPON_ACTIVITY__enter_coupon_code">Enter coupon code</string>
    <string name="COUPON_ACTIVITY__invalid_code">It seems you do NOT have valid coupons.</string>
    <string name="COUPON_ACTIVITY__enter_code_again">Please enter a valid coupon and try again</string>
    <string name="COUPON_ACTIVITY__code_not_available">It seems you do have  valid coupons</string>
    <string name="COUPON_ACTIVITY__cancel">CANCEL</string>
    <string name="COUPON_ACTIVITY__apply">APPLY</string>
    <string name="call_ndriver">Call  Driver</string>
    <string name="share_nride_link">Share Ride Link</string>
    <string name="chat_n_with_driver">Chat  with Driver</string>
    <string name="emergency">Emergency</string>
    <string name="no_driver_available">Sorry No Driver available!</string>
</resources>