<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/layout_light_for_dialog"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_online_offline"
                android:tint="@color/icons_8_muted_grey"/>

            <com.carflash.user.samir.customviews.TypeFaceTextMonixBold
                android:id="@+id/tv_cancel_ride"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/RENTAL_RIDE_LOADER_ACTIVTY__sorry_no_driver_available"
                android:textColor="@color/colorText"
                android:textSize="15dp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorView" />

            <com.carflash.user.typeface.TypefaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/no_driver_available"
                android:textColor="@color/colorText"
                android:textSize="16dp"
                geekui:customTypeface="OpenSans_Regular.ttf"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/layout_dark_for_dialog">



                <LinearLayout
                    android:id="@+id/yes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/colorPrimary">

                    <com.carflash.user.typeface.TypefaceTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/RENTAL_RIDE_LOADER_ACTIVTY__ok"
                        android:textColor="@color/pure_white"
                        android:textSize="15dp"
                        geekui:customTypeface="OpenSans_Regular.ttf"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>