<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driver_name_txt"
                android:text="Driver name"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 2.976895776"
                android:maxLength="5"
                android:maxLines="1"
                android:gravity="center"
                android:drawableLeft="@drawable/ic_star_small"
                android:id="@+id/rating_txt"
                android:textSize="16dp"/>
            <com.carflash.user.accounts.TypeFaceDosisSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/car_type_name_txt"
                android:text="Luxury"/>
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/driver_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:src="@drawable/ic_driver_" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/car_img"
                android:padding="3dp"
                android:visibility="gone"
                android:src="@drawable/car"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Maruti Wagon R"
                android:id="@+id/car_model_name_txt"
                android:textStyle="bold"/>
            <com.carflash.user.accounts.TypeFaceDosisSemiBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/car_number_txt"
                android:text="DL-9970"/>
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/call_ndriver"
            android:textColor="@color/icons_8_muted_blue_dark"
            android:layout_weight="1"
            android:id="@+id/call_driver_btn"
            android:gravity="center"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#cccccc"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/share_nride_link"
            android:layout_weight="1"
            android:textColor="@color/icons_8_muted_blue_dark"
            android:id="@+id/share_btn"
            android:gravity="center"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#cccccc"/>

        <TextView
            android:id="@+id/chat_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/chat_n_with_driver"
            android:textColor="@color/icons_8_muted_green_2_dark" />


        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#cccccc"/>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/sos"
            android:layout_weight="1"
            android:visibility="visible">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emergency"
                android:textStyle="bold"
                android:textColor="@color/icons_8_muted_red_dark"/>
        </LinearLayout>



    </LinearLayout>
s





</LinearLayout>